fix: overflowX

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -10,6 +10,9 @@ body
     .fullscreenEnabled
       opacity: 0
 
+.main, main
+  max-width: 100vw
+  overflow-x: hidden
 iframe
   background: $bg-project
   background-color: $bg-project
